[gd_scene load_steps=4 format=3 uid="uid://dueqxccojw3df"]

[ext_resource type="Script" uid="uid://dny2yjfocrggf" path="res://Scripts/Explore/first_person_room.gd" id="1"]
[ext_resource type="Script" uid="uid://dyapugx5dde5j" path="res://Scripts/Explore/player_fps.gd" id="2"]
[ext_resource type="Script" uid="uid://dmos565uqxtt1" path="res://Scripts/Explore/item_pickup.gd" id="3"]
[ext_resource type="Script" uid="uid://c2oso3yfsqrvn" path="res://Scripts/Explore/door_portal.gd" id="4"]
[ext_resource type="PackedScene" path="res://Scenes/UI/Map/DungeonMiniMap.tscn" id="5_minimap"]

[sub_resource type="Environment" id="12"]
background_mode = 1
ambient_light_color = Color(1, 1, 1, 1)
ambient_light_energy = 3.0

[sub_resource type="CapsuleShape3D" id="7"]
radius = 0.35
height = 1.6

[sub_resource type="BoxMesh" id="1"]
size = Vector3(16, 0.2, 16)

[sub_resource type="BoxShape3D" id="4"]
size = Vector3(16, 0.2, 16)

[sub_resource type="BoxMesh" id="2"]
size = Vector3(16, 3.5, 0.2)

[sub_resource type="BoxShape3D" id="5"]
size = Vector3(16, 3.5, 0.2)

[sub_resource type="BoxMesh" id="3"]
size = Vector3(0.2, 3.5, 16)

[sub_resource type="BoxShape3D" id="6"]
size = Vector3(0.2, 3.5, 16)

[sub_resource type="CylinderMesh" id="9"]
height = 2.5

[sub_resource type="CylinderShape3D" id="10"]
height = 2.5

[sub_resource type="BoxMesh" id="8"]
size = Vector3(1.2, 1.2, 1.2)

[sub_resource type="BoxShape3D" id="11"]
size = Vector3(1.2, 1.2, 1.2)

[node name="FirstPersonRoom" type="Node3D" unique_id=1768828592]
script = ExtResource("1")

[node name="WorldEnvironment" type="WorldEnvironment" parent="." unique_id=573723252]
environment = SubResource("12")

[node name="Player" type="CharacterBody3D" parent="." unique_id=1735089132]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
script = ExtResource("2")

[node name="CollisionShape3D" type="CollisionShape3D" parent="Player" unique_id=815259864]
shape = SubResource("7")

[node name="Head" type="Node3D" parent="Player" unique_id=1539333236]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.6, 0)

[node name="Camera3D" type="Camera3D" parent="Player/Head" unique_id=1924902142]

[node name="RayCast3D" type="RayCast3D" parent="Player/Head" unique_id=1686988431]
target_position = Vector3(0, 0, -4)
collide_with_areas = true

[node name="Room" type="Node3D" parent="." unique_id=309040828]

[node name="Floor" type="StaticBody3D" parent="Room" unique_id=1196536237]

[node name="MeshInstance3D" type="MeshInstance3D" parent="Room/Floor" unique_id=860431295]
mesh = SubResource("1")

[node name="CollisionShape3D" type="CollisionShape3D" parent="Room/Floor" unique_id=812194337]
shape = SubResource("4")

[node name="WallNorth" type="StaticBody3D" parent="Room" unique_id=1239400479]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.75, -8)

[node name="MeshInstance3D" type="MeshInstance3D" parent="Room/WallNorth" unique_id=1338994069]
mesh = SubResource("2")

[node name="CollisionShape3D" type="CollisionShape3D" parent="Room/WallNorth" unique_id=842926878]
shape = SubResource("5")

[node name="WallSouth" type="StaticBody3D" parent="Room" unique_id=1165083734]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.75, 8)

[node name="MeshInstance3D" type="MeshInstance3D" parent="Room/WallSouth" unique_id=1101725015]
mesh = SubResource("2")

[node name="CollisionShape3D" type="CollisionShape3D" parent="Room/WallSouth" unique_id=1394596071]
shape = SubResource("5")

[node name="WallWest" type="StaticBody3D" parent="Room" unique_id=217032820]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -8, 1.75, 0)

[node name="MeshInstance3D" type="MeshInstance3D" parent="Room/WallWest" unique_id=422249722]
mesh = SubResource("3")

[node name="CollisionShape3D" type="CollisionShape3D" parent="Room/WallWest" unique_id=1727113426]
shape = SubResource("6")

[node name="WallEast" type="StaticBody3D" parent="Room" unique_id=549120591]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 8, 1.75, 0)

[node name="MeshInstance3D" type="MeshInstance3D" parent="Room/WallEast" unique_id=1363960577]
mesh = SubResource("3")

[node name="CollisionShape3D" type="CollisionShape3D" parent="Room/WallEast" unique_id=658551258]
shape = SubResource("6")

[node name="Ceiling" type="StaticBody3D" parent="Room" unique_id=1148202188]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 3.5, 0)

[node name="MeshInstance3D" type="MeshInstance3D" parent="Room/Ceiling" unique_id=853023909]
mesh = SubResource("1")

[node name="CollisionShape3D" type="CollisionShape3D" parent="Room/Ceiling" unique_id=726125108]
shape = SubResource("4")

[node name="Lights" type="Node3D" parent="Room" unique_id=208536983]

[node name="OmniLightCenter" type="OmniLight3D" parent="Room/Lights" unique_id=1635340367]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 3, 0)
light_energy = 8.0
omni_range = 30.0

[node name="OmniLightNE" type="OmniLight3D" parent="Room/Lights" unique_id=142744290]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 8, 3, 8)
light_energy = 2.5

[node name="OmniLightNW" type="OmniLight3D" parent="Room/Lights" unique_id=336530777]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -8, 3, 8)
light_energy = 2.5

[node name="OmniLightSE" type="OmniLight3D" parent="Room/Lights" unique_id=243886882]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 8, 3, -8)
light_energy = 2.5

[node name="OmniLightSW" type="OmniLight3D" parent="Room/Lights" unique_id=808318131]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -8, 3, -8)
light_energy = 2.5

[node name="Pillar" type="StaticBody3D" parent="Room" unique_id=1948522772]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 3.4390929, 1.25, 0)

[node name="MeshInstance3D" type="MeshInstance3D" parent="Room/Pillar" unique_id=1955141725]
mesh = SubResource("9")

[node name="CollisionShape3D" type="CollisionShape3D" parent="Room/Pillar" unique_id=696441866]
shape = SubResource("10")

[node name="Crate1" type="StaticBody3D" parent="Room" unique_id=182583512]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 5, 0.6, -5)

[node name="MeshInstance3D" type="MeshInstance3D" parent="Room/Crate1" unique_id=137684055]
mesh = SubResource("8")

[node name="CollisionShape3D" type="CollisionShape3D" parent="Room/Crate1" unique_id=824900620]
shape = SubResource("11")

[node name="Crate2" type="StaticBody3D" parent="Room" unique_id=2042193928]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -6, 0.6, 4)

[node name="MeshInstance3D" type="MeshInstance3D" parent="Room/Crate2" unique_id=1045918747]
mesh = SubResource("8")

[node name="CollisionShape3D" type="CollisionShape3D" parent="Room/Crate2" unique_id=342817996]
shape = SubResource("11")

[node name="Crate3" type="StaticBody3D" parent="Room" unique_id=1166738320]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 6, 0.6, 6)

[node name="MeshInstance3D" type="MeshInstance3D" parent="Room/Crate3" unique_id=478200569]
mesh = SubResource("8")

[node name="CollisionShape3D" type="CollisionShape3D" parent="Room/Crate3" unique_id=585516015]
shape = SubResource("11")

[node name="DoorPortal_A" type="Area3D" parent="Room" unique_id=501015342]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.5, -7.5)
script = ExtResource("4")

[node name="CollisionShape3D" type="CollisionShape3D" parent="Room/DoorPortal_A" unique_id=1322769337]
shape = SubResource("11")

[node name="MeshInstance3D" type="MeshInstance3D" parent="Room/DoorPortal_A" unique_id=1964276360]
mesh = SubResource("8")

[node name="PromptLabel3D" type="Label3D" parent="Room/DoorPortal_A" unique_id=1038193548]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.5, 0)
text = "Press E to enter"

[node name="DoorPortal_B" type="Area3D" parent="Room" unique_id=1715641336]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.5, 7.5)
script = ExtResource("4")

[node name="CollisionShape3D" type="CollisionShape3D" parent="Room/DoorPortal_B" unique_id=730223533]
shape = SubResource("11")

[node name="MeshInstance3D" type="MeshInstance3D" parent="Room/DoorPortal_B" unique_id=1873000270]
mesh = SubResource("8")

[node name="PromptLabel3D" type="Label3D" parent="Room/DoorPortal_B" unique_id=1304334365]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.5, 0)
text = "Press E to enter"

[node name="Items" type="Node3D" parent="." unique_id=1483690208]

[node name="ItemPickup" type="Area3D" parent="Items" unique_id=1295565211]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, -2)
script = ExtResource("3")
item_id = "coin"

[node name="CollisionShape3D" type="CollisionShape3D" parent="Items/ItemPickup" unique_id=936453652]
shape = SubResource("6")

[node name="Sprite3D" type="Sprite3D" parent="Items/ItemPickup" unique_id=1894122486]
pixel_size = 0.02

[node name="UI3D" type="Node3D" parent="." unique_id=1363997722]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2.2, 0)

[node name="InfoLabel3D" type="Label3D" parent="UI3D" unique_id=1147080270]

[node name="UI" type="CanvasLayer" parent="." unique_id=240511375]

[node name="InteractionLabel" type="Label" parent="UI" unique_id=1351089598]
visible = false
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.1
anchor_right = 0.5
anchor_bottom = 0.1
offset_left = -80.0
offset_right = 80.0
offset_bottom = 24.0
horizontal_alignment = 1
vertical_alignment = 1

[node name="DungeonMiniMap" parent="." instance=ExtResource("5_minimap")]
